@@ -35,6 +35,9 @@
  *  with Slurm; if not, write to the Free Software Foundation, Inc.,
  *  51 Franklin Street, Fifth Floor, Boston, MA 02110-1301  USA.
 \*****************************************************************************/
+
+#define _GNU_SOURCE
+
 #include "affinity.h"
 
 #ifdef HAVE_NUMA
