@@ -33,6 +33,9 @@
  *  with Slurm; if not, write to the Free Software Foundation, Inc.,
  *  51 Franklin Street, Fifth Floor, Boston, MA 02110-1301  USA.
 \*****************************************************************************/
+
+#define _GNU_SOURCE
+
 #include <ctype.h>
 #include "affinity.h"
 
